Welcome page complete but with a white space issue

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -2,7 +2,12 @@
   text-align: center;
   color: darkblue;
   font-weight: bold;
-  background: beige;
+  background-color: beige;
+  /* position: fixed; */
+  /* clear: both;
+  overflow: hidden;
+  margin: -3% 0 30px 0;
+  padding: 0; */
 }
 
 .App-logo {
@@ -34,28 +39,48 @@
 .Bio {
   font-size: 20px;
   border: 2px solid darkblue;
-  width: 60%;
+  width: 50%;
   margin: 10px;
-  padding: 15px;
-  position:relative; bottom: 35px; left: 310px;
+  padding: 25px;
+  position: relative; top: 70px; left: 420px;
 }
 
 .Description {
-  position:relative; top: 95px; margin-right: 285px;
   font-size: 23px;
+  position: relative; bottom: 12px;
+
+}
+
+#filter {
+  background-color: beige;
+  padding: 0;
+  margin: 0;
 }
 
 .footsies {
  color: darkblue;
  font-size: 20px;
- position:relative; bottom: 18px;
+ position:relative; bottom: 50px;
+}
+
+.Github {
+  width: 12.5%;
+  height: 12.5%;
+  margin: 35px;
 }
 
 .HeaderTitle {
   color: darkblue;
   font-weight: bold;
   font-size: 60px;
-  position:relative; top: 40px;
+  position:relative;
+}
+
+.LinkedIn {
+  width: 17%;
+  height: 17%;
+  margin: 35px;
+  position: relative; top: 52px;
 }
 
 .Me {
@@ -64,38 +89,48 @@
   width: 300px;
   height: 380px;
   margin: 5px;
-  position:relative; bottom: 60px; margin-right: 1175px;
+  position: relative; bottom: 400px; right: 15px;
+}
+
+.Medium {
+  width: 12.5%;
+  height: 12.5%;
+  margin: 35px;
 }
 
 .Name {
   font-size: 40px;
-  position: relative; top: 100px; margin-right: 280px;
+  position: relative;
 }
 
-.navLinks li{
+.navLinks {
   margin-top: 30px;
   list-style-type: none;
   text-align: center;
 }
 
+/* .navLinks:hover {
+  opacity: 0.5;
+  color: red;
+  background-color: red;
+} */
+
+.navOpps:hover,
+.navOpps:active {
+  color: red;
+  background-color: darkblue;
+}
+
 .navOpps {
   color: darkblue;
   margin: 70px;
-  position: relative; bottom: 185px;
-  font-size: 35px
+  position: relative;
+  font-size: 35px;
+  position: relative; top: 5px;
 }
 
 .Socials {
-  background: beige;
-  background-color: transparent;
-  /* opacity: 0.6; */
-  position:relative; bottom: 90px;
-}
-
-.SocialLogo {
-  margin: 80px;
-  background: beige;
-  background-color: transparent;
+  position: relative; right: 153px; bottom: 20px;
 }
 
 @keyframes App-logo-spin {
@@ -106,3 +141,27 @@
     transform: rotate(360deg);
   }
 }
+/* nav {
+  background-color: gold;
+}
+
+nav a {
+  display: inline-block;
+  margin: 1rem 2rem;
+  text-decoration: none;
+  font-size: 1.2em;
+  color: black;
+  border-bottom: 2px solid black;
+  transition: 0.1s;
+}
+
+nav a:hover,
+nav a:active {
+  color: white;
+  border-bottom: 2px solid white;
+}
+
+nav a.active {
+  background-color: black;
+  color: white;
+} */
